[package]
name = "rauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
env_logger = "0.9.0"
actix-web = {version = "4", features = ["openssl"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
